--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#38498c" />
-  <title>Schedule</title>
-</head>
-
-<body>
-  <div id="root"></div>
-<script type="text/javascript" src="/bundle.js"></script></body>
-
-</html>
+<!DOCTYPE html> <html lang=en> <head> <meta charset=UTF-8> <meta name=viewport content="width=device-width,initial-scale=1"> <meta http-equiv=X-UA-Compatible content="ie=edge"> <meta name=theme-color content=#38498c /> <title>Schedule</title> <link href="/main.css" rel="stylesheet"></head> <body> <div id=root></div> <script type="text/javascript" src="/bundle.js"></script></body> </html>
